fix: shrink date input chevron on iOS mobile

--- a/client/src/styles/BodyWeightTracker.module.scss
+++ b/client/src/styles/BodyWeightTracker.module.scss
@@ -80,6 +80,14 @@
 
   &[type="date"] {
     color-scheme: dark;
+
+    &::-webkit-calendar-picker-indicator {
+      width: 16px;
+      height: 16px;
+      opacity: 0.6;
+      cursor: pointer;
+      filter: invert(1);
+    }
   }
 
   &::placeholder {
